[package]
name = "twt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
tokio = { version = "0.2", features = ["full"] }
